tests/ui/associated-types/associated-type-as-value.stderr
error[E0599]: no associated function or constant named `Item` found for type parameter `T` in the current scope
  --> $DIR/associated-type-as-value.rs:4:8
   |
LL | fn foo<T: Iterator>() {
   |        - associated function or constant `Item` not found for this type parameter
LL |     T::Item;
   |        ^^^^ associated function or constant not found in `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
